--- a/css/main.css
+++ b/css/main.css
@@ -124,15 +124,26 @@ header {
 }
 
 .heroImage {
-  background: url("/img/photoRedBldg.jpg")no-repeat center;
-  background-size: cover;
-  height: 580px;
+  background-image: url("/img/photoRedBldg.jpg");
+  background-size: auto 100%;
+  height: 550px;
 }
 
 .heroImage > h5 {
   margin-top: 0;
 }
 
+/* Aside */
+
+aside {
+  width: 35%;
+  float:left;
+}
+
+.profileImg {
+  height: 5em;
+  width: 5em;
+}
 
 
 
