--- a/css/main.css
+++ b/css/main.css
@@ -108,15 +108,19 @@ body {
 
 header {
   background-color: #FFFFFF;
+  height: 5em;
 }
 
 .leftNav {
   display: inline-flex;
+  margin: 15px 0 0 0;
 }
 
 .rightNav {
   display: inline-flex;
   float:right;
+  margin: 15px 0 0 0;
+  padding-right: 20px;
 }
 
 .headerNav  ul {
