gave the li in the leftNav class an id of navLines and gave it a css declaration of padding 10px 20px which positioned the line item proper spacing and hope the same applies for the others when i apply the same id to the other line items;

--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,7 @@ body {
   margin: 0 5em 0 5em;
 }
 
+/* Navigation Header */
 header {
   background-color: #FFFFFF;
   height: 5em;
@@ -127,6 +128,12 @@ header {
   margin-bottom: 0;
 }
 
+#navLines {
+  padding: 10px 20px;
+
+}
+
+/* Hero Image Carousel */
 .heroImage {
   background-image: url("/img/photoRedBldg.jpg");
   background-size: 100% 100%;
