--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,20 @@ header {
 
 #navLinesLeft {
   padding: 10px 20px;
+}
 
+#navLinesRight {
+  color: white;
+  margin-top: 10px;
+}
+
+/* nav-bar right search icon*/
+
+.rightNav li:first-child {
+  background-color: #BCBFC3;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 50%;
 }
 
 /* Hero Image Carousel */
