removed the list style from the storiesAndFollowers list and the posts timeline list

--- a/css/main.css
+++ b/css/main.css
@@ -197,7 +197,15 @@ aside {
   border-radius: 50%;
 }
 
+/* number of stories and followers div */
+.storiesAndFollowers ul {
+  list-style: none;
+}
 
+/* posts timeline list */
+.timeline {
+  list-style: none;
+}
 
 
 
