--- a/css/main.css
+++ b/css/main.css
@@ -200,6 +200,12 @@ aside {
 /* number of stories and followers div */
 .storiesAndFollowers ul {
   list-style: none;
+  margin: 0 2em;
+  padding-left: 55px;
+}
+
+.storiesAndFollowers ul li:first-child {
+  float:left;
 }
 
 /* posts timeline list */
