gave the hr elements margin-right and margin-left of 3em and trying to change the color to the grey hex as per the spec but it is not rendering for some reason;

--- a/css/main.css
+++ b/css/main.css
@@ -208,6 +208,12 @@ aside {
   float:left;
 }
 
+hr {
+  margin-right: 3em;
+  margin-left: 3em;
+  color: #303334;
+}
+
 /* posts timeline list */
 .timeline {
   list-style: none;
