styled the buttons for following and message with background color same as the aside column but having trouble with the rounded edges as border-radius is not as simple perhaps a padding will solve the trick. commented out the last two line items on the timeline as I want to get the style correct for the first two before i go further

--- a/css/main.css
+++ b/css/main.css
@@ -197,7 +197,18 @@ aside {
   border-radius: 50%;
 }
 
-/* number of stories and followers div */
+.buttonsFollowMessage button {
+  border: 1px solid #5C5E5F;
+  background-color: #1C1F20;
+  color: #5C5E5F;
+}
+
+.buttonsFollowMessage button:nth-child(even){
+  width: 101px;
+  margin-left: 2.5em;
+}
+
+/* Aside: number of stories and followers div */
 .storiesAndFollowers ul {
   list-style: none;
   margin: 0 2em;
@@ -214,7 +225,7 @@ hr {
   color: #303334;
 }
 
-/* posts timeline list */
+/* Aside: posts timeline list */
 .timeline {
   list-style: none;
 }
