--- a/css/main.css
+++ b/css/main.css
@@ -303,7 +303,13 @@ hr {
   margin-top: 2em;
   margin-left: 2em;
 }
-figure img {
+
+figure img:hover{
+  background-color:#4D8FA5;
+  opacity: 1;
+}
+
+figure img{
   width: 150px;
   height: 150px;
 }
@@ -315,6 +321,8 @@ figcaption {
   font-size: 25px;
   font-weight: 100;
 }
+
+/* hover state on the dashboard images  */
 
 /* dashboard section carrot */
 
@@ -337,12 +345,9 @@ figcaption {
   width: 300px;
   height: 190px;
 }
-
 .userMessages li {
   height: 95px;
-
 }
-
 .userMessages li img {
   width: 40px;
   height: 40px;
@@ -361,19 +366,17 @@ figcaption {
   right: 4em;
   color: #ABACAE;
 }
-
 .userMessages p {
   position: relative;
-  bottom:3em;
+  bottom: 3em;
   left: 3em;
   color: #646464;
 }
-.userMessages hr{
-position: relative;
-right: 2em;
-bottom: 1em;
+.userMessages hr {
+  position: relative;
+  right: 2em;
+  bottom: 1em;
 }
-
 .userMessages button {
   background-color: #EFF0F0;
   width: 91%;
@@ -384,6 +387,7 @@ bottom: 1em;
   padding-bottom: 5px;
   color: #B3B6BA;
 }
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
