--- a/css/main.css
+++ b/css/main.css
@@ -304,15 +304,10 @@ hr {
   margin-left: 2em;
 }
 
-figure img:hover{
-  background-color:#4D8FA5;
-  opacity: 1;
-}
-
-figure img{
+/*figure img{
   width: 150px;
   height: 150px;
-}
+}*/
 figcaption {
   position: relative;
   color: #FFFFFF;
@@ -323,6 +318,42 @@ figcaption {
 }
 
 /* hover state on the dashboard images  */
+
+#postsImage {
+  background: url("http://lorempixel.com/400/200");
+  background-size: cover;
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+}
+
+#imageOverlay {
+background: #4D8FA5;
+padding: 45px 0 104px 0;
+opacity: 0;
+text-align: center;
+}
+#postsImage:hover #imageOverlay {
+  opacity: 0.7;
+}
+.overlayIcons {
+  position: relative;
+  top: 1em;
+}
+.overlayIcons i:first-child {
+  background-color: #FFFFFF;
+  color:#4D8FA5;
+  padding: 10px;
+  border-radius: 50%;
+}
+
+.overlayIcons i:nth-child(even) {
+  background-color: #FFFFFF;
+  color:#4D8FA5;
+  padding: 10px 11px 10px 11px;
+  border-radius: 50%;
+  margin-left: 1em;
+}
 
 /* dashboard section carrot */
 
