--- a/css/main.css
+++ b/css/main.css
@@ -162,17 +162,18 @@ body {
 
 /* Hero Image Carousel */
 
+
 .heroImage {
-  /*background-image: url("/img/photoRedBldg.jpg");
-  commented out above image to test the size of the image because the original was too large */
-  background-image: url("/img/rsz_1rsz_photoredbldg.jpg");
+  background-image: url("/img/rsz_2rsz_photoRedBldg.jpg");
+  /*commented out above image to test the size of the image because the original was too large */
+  /*background-image: url("/img/rsz_1rsz_photoredbldg.jpg");*/
   background-size: 100% 100%;
-  height: 480px;
-  color: #FFFFFF;
+  margin: 0;
 }
 .heroText {
   padding-top: 23em;
   padding-left: 2em;
+  color: #FFFFFF;
 }
 .heroText h1 {
   font-family: initial;
@@ -264,7 +265,7 @@ hr {
   width: 2px;
   height: 8.7em;
   background: #323536;
-  top: 63.5em;
+  top: 68.5em;
   left: 17em;
 }
 
@@ -304,10 +305,6 @@ hr {
   margin-left: 2em;
 }
 
-/*figure img{
-  width: 150px;
-  height: 150px;
-}*/
 figcaption {
   position: relative;
   color: #FFFFFF;
