--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,8 @@ body {
   background-size: cover;
 }
 .Container {
-  margin: 0 5em 0 5em;
+  margin: 0 auto;
+  max-width: 900px;
 }
 
 /* Navigation Header */
