--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ body {
   max-width: 80%;
 }
 
-/* Navigation Header */
+/* Nav Bar */
 
 .headerNav {
   background-color: #FFFFFF;
@@ -161,15 +161,14 @@ body {
   margin-top: 6px;
 }
 
+/* End Nav Bar */
+
+
 /* Hero Image Carousel */
 
-
-/*.heroImage {
-  background-size: 100% 100%;
-  margin: 0;
-  height: 740px;
-}*/
-
+.heroImage {
+  height: 750px;
+}
 .heroText {
   position: relative;
   bottom: 15em;
@@ -181,18 +180,20 @@ body {
   font-size: 60px;
   font-weight: 900;
 }
-
-/*.carousel {
-  height: 734px!important;
-}*/
-
+.carousel-inner {
+  height: 750px!important;
+}
+.carousel-inner .item img {
+  height: 750px;
+  width: 100%;
+}
 
 /* pin and heart icons on hero image */
 
 .pinHeartIcons {
+  bottom: 50em;
+  left: 76%;
   position: relative;
-  bottom: 58em;
-  left: 52em;
 }
 .pinHeartIcons i:first-child {
   color: #FFD56C;
@@ -201,18 +202,29 @@ body {
 .pinHeartIcons i:nth-child(even) {
   color: #FFFFFF;
 }
+.pinHeartIcons p {
+  color: #FFFFFF;
+  display: inline;
+  font-size: 1.5em;
+  margin-left: 0.25em;
+}
+
+/*End pin and heart icons for hero image */
+
+
+/* End Hero Image Carousel  */
+
 
 /* Aside */
 
 aside {
-  width: 35%;
+  width: 30%;
   float: left;
   text-align: center;
   background-color: #1C1F20;
   color: #FFFFFF;
   padding-top: 2em;
 }
-
 aside > h3 {
   margin-bottom: 0;
 }
@@ -221,24 +233,25 @@ aside > h3 {
   width: 5em;
   border-radius: 50%;
 }
-
 .buttonsFollowMessage {
-  margin: 2em;
+  margin: 2em 0 2em 0;
 }
 .buttonsFollowMessage button {
   border: 1px solid #5C5E5F;
   background-color: #1C1F20;
   color: #5C5E5F;
-  padding: 5px;
   border-radius: 2em;
+}
+.followingButton {
+  padding: 2% 5% 2% 5%;
+}
+.messageButton {
+  padding: 2% 6% 2% 6%;
+  margin-left: 2.5em;
 }
 .buttonsFollowMessage button:hover {
   background-color: #00A46D;
   color: #FFFFFF;
-}
-.buttonsFollowMessage button:nth-child(even) {
-  width: 101px;
-  margin-left: 2.5em;
 }
 
 /* Aside: number of stories and followers div */
@@ -249,22 +262,31 @@ aside > h3 {
 .storiesAndFollowers ul {
   list-style: none;
   margin: 0 2em;
-  padding-left: 42px;
+  padding: 0 0 0 0;
+}
+.storiesAndFollowers ul li {
+  display: inline-block;
 }
 .storiesAndFollowers ul li:first-child {
   float: left;
   margin-right: 3em;
 }
+.storiesAndFollowers li p:first-child {
+  margin-bottom: 0;
+  font-size: 30px;
+}
+.m {
+  font-size: 20px;
+}
 hr {
-  margin-right: 3em;
-  margin-left: 3em;
+  margin-right: 2em;
+  margin-left: 2em;
   color: #303334;
 }
 
 /* Aside: posts timeline list */
 
 .timeline {
-  display: inline-block;
   list-style: none;
   margin: 2em;
   padding-left: 0;
@@ -272,7 +294,7 @@ hr {
 }
 .timeline li {
   display: inline-block;
-  width: 272px;
+  width: 100%;
 }
 .timeline p:first-child {
   float: left;
@@ -280,35 +302,35 @@ hr {
 }
 .timeline p:nth-child(even) {
   float: right;
-  margin-top: 3em;
-  width: 49.5%;
+  width: 48.5%;
 }
 .fa-circle {
   position: relative;
-  right: 5em;
+  right: 4.3em;
 }
 .secondCircle {
   position: relative;
-  left: 3.8em;
-  top: 3em;
+  left: 3.4em;
 }
 
 /* timeline verticla line connecting dots */
 
 .timeline::before {
+  background: #323536;
   content: '';
+  height: 100%;
+  left: 45%;
   position: absolute;
   width: 2px;
-  height: 100%;
-  background: #323536;
 }
 
 /* End Aside */
 
+
 /* MainContent: Posts Dashboard */
 
 .mainContent {
-  width: 65%;
+  width: 70%;
   float: right;
   background-color: #FFFFFF;
 }
@@ -349,11 +371,6 @@ hr {
   background-color: #EBEDEB;
 }
 
-/*.postsContainer {
-  display: inline-flex;
-  width: 550px;
-}*/
-
 figure {
   display: inline-block;
   width: 30%;
@@ -371,20 +388,53 @@ figcaption {
   font-size: 25px;
   font-weight: 100;
 }
-figure.thirdFigure {
+.firstFigure {
+  /*background: url("http://lorempixel.com/400/200");
+  background-size: cover;*/
+  bottom:1.3em;
+  position:relative;
+}
+.firstFigcaption {
+  font-size: 40px;
+  bottom: 1.5em;
+  position: relative;
+}
+.secondFigcaption {
+  font-size: 25px;
+}
+.thirdFigure {
   height: 320px;
 }
-figure.fourthFigure {
+.thirdFigcaption {
+  font-size: 25px;
+}
+.fourthFigure {
   position: relative;
-  bottom:7em;
+  bottom: 7em;
   width: 62.5%;
+}
+.fourthFigcaption {
+  bottom: 5em;
+  left: 0;
+  margin: 0 1em 0 1em;
+  text-align: center;
+}
+.fourthFigcaption p {
+  font-weight: 600;
+}
+.fourthFigcaption em {
+  display: inherit;
+  font-size: 12px;
+  font-weight: 500;
 }
 /* hover state on the dashboard images  */
 
 #imageOverlay {
   background: #4D8FA5;
-  padding: 45px 0 104px 0;
+  bottom: 2em;
   opacity: 0;
+  padding: 87px 0 104px 0;
+  position: relative;
   text-align: center;
 }
 .dashboardPosts figure:hover #imageOverlay {
@@ -431,6 +481,15 @@ figure.fourthFigure {
 .dashboardImgIcons i:nth-child(even) {
   color: #FFFFFF;
 }
+
+.dashboardImgIcons p {
+  color: #FFFFFF;
+  display: inline;
+  font-size: 1.5em;
+  margin-left: 0.25em;
+}
+/* end main content dashboard */
+
 
 /* inbox popover template */
 
