--- a/css/main.css
+++ b/css/main.css
@@ -334,6 +334,9 @@ hr {
   float: right;
   background-color: #FFFFFF;
 }
+
+/* Main content nav bar */
+
 .postsNav {
   height: 4em;
 }
@@ -367,15 +370,18 @@ hr {
   padding-right: 5px;
   border-radius: 50%;
 }
+
+/* End Main content nav bar */
+
+
+/* Image Dashboard of figures */
+
 .dashboardPosts {
   background-color: #EBEDEB;
 }
-
 figure {
   display: inline-block;
   width: 30%;
-  background: url("http://lorempixel.com/400/200");
-  background-size: cover;
   height: 220px;
   margin: 1em 0 0 1em;
 }
@@ -383,38 +389,77 @@ figcaption {
   position: relative;
   color: #FFFFFF;
   display: inherit;
-  bottom: 2em;
   left: 1em;
   font-size: 25px;
   font-weight: 100;
 }
+
+/* First dashboard image figure */
+
 .firstFigure {
-  /*background: url("http://lorempixel.com/400/200");
-  background-size: cover;*/
-  bottom:1.3em;
-  position:relative;
+  background: url("http://lorempixel.com/400/200");
+  background-size: cover;
+  bottom: 10.6em;
+  position: relative;
 }
 .firstFigcaption {
   font-size: 40px;
-  bottom: 1.5em;
+  bottom: 2.5em;
+  position: relative;
+}
+
+/* First dashboard image figure */
+
+
+/* Second dashboard image figure */
+
+.secondFigure {
+  background: url("http://lorempixel.com/400/200");
+  background-size: cover;
+  bottom: 9.3em;
   position: relative;
 }
 .secondFigcaption {
+  bottom: 4em;
   font-size: 25px;
 }
+
+/* End second dashboard image figure */
+
+
+/* Third dashboard image figure */
+
 .thirdFigure {
-  height: 320px;
+  background: url("http://lorempixel.com/400/200");
+  background-size: cover;
+  height: 350px;
 }
 .thirdFigcaption {
+  bottom: 4em;
   font-size: 25px;
 }
-.fourthFigure {
+
+.thirdFigure #imageOverlay {
+  padding-top: 218px;
+}
+.thirdFigure .overlayIcons i {
   position: relative;
-  bottom: 7em;
+  bottom:5em;
+}
+/* End third dashboard image figure */
+
+
+/* Fourth dashboard image figure */
+
+.fourthFigure {
+  background: url("http://lorempixel.com/400/200");
+  background-size: cover;
+  position: relative;
+  bottom: 15.5em;
   width: 62.5%;
 }
 .fourthFigcaption {
-  bottom: 5em;
+  bottom: 6.5em;
   left: 0;
   margin: 0 1em 0 1em;
   text-align: center;
@@ -427,6 +472,65 @@ figcaption {
   font-size: 12px;
   font-weight: 500;
 }
+.fourthFigure .fa-heart {
+  color: #FF554C;
+}
+
+/* End Fourth dashboard image figure */
+/* Fifth dashboard image figure */
+
+.fifthFigure {
+  background-color: #FFFFFF;
+  bottom: 8em;
+  position: relative;
+}
+.fifthFigcaption {
+  color: #9C9C9C;
+  font-size: 12px;
+  margin: 0 2em 0 1em;
+  position: relative;
+  text-align: center;
+  top: 1em;
+}
+.fifthFigcaption p {
+  font-weight: 600;
+  margin: 1em 0 2em 0;
+}
+.fifthFigcaption em {
+  display: inherit;
+  font-size: 12px;
+  font-weight: 600;
+  margin: 1em;
+  text-align: left;
+}
+/* !!kept the post image div so i may have the image place within the figure below the text unlike the other figures that dont have text!!*/
+.fifthPostImage {
+  background: url("http://lorempixel.com/400/200");
+  background-size: cover;
+}
+.fifthPostImage #imageOverlay {
+  bottom: 0;
+}
+/* End Fifth dashboard image figure */
+
+/* Sixth dashboard image figure */
+.sixthFigure {
+  background: url("http://lorempixel.com/400/200");
+  background-size: cover;
+  bottom: 24em;
+  position: relative;
+}
+/* End Sixth dashboard image figure */
+
+/* Seventh dashboard image figure */
+.seventhFigure {
+  background: url("http://lorempixel.com/400/200");
+  background-size: cover;
+  bottom: 22.55em;
+  position: relative;
+}
+/* End Seventh dashboard image figure */
+
 /* hover state on the dashboard images  */
 
 #imageOverlay {
@@ -457,6 +561,7 @@ figcaption {
   border-radius: 50%;
   margin-left: 1em;
 }
+/* End hover states on dashboard image */
 
 /* dashboard section caret */
 
@@ -466,13 +571,13 @@ figcaption {
   bottom: 0.55em;
   color: #EBEDEB;
 }
+/* End dashboard section caret */
 
 /* dashboard image icons */
 
 .dashboardImgIcons {
   position: relative;
-  top: 2em;
-  left: 7em;
+  top: 1em;
 }
 .dashboardImgIcons i:first-child {
   color: #FFD56C;
@@ -481,13 +586,36 @@ figcaption {
 .dashboardImgIcons i:nth-child(even) {
   color: #FFFFFF;
 }
-
 .dashboardImgIcons p {
   color: #FFFFFF;
   display: inline;
   font-size: 1.5em;
   margin-left: 0.25em;
 }
+.firstFigure .dashboardImgIcons {
+  left: 8em;
+}
+.secondFigure .dashboardImgIcons {
+  left: 8em;
+}
+.thirdFigure .dashboardImgIcons {
+  left: 7em;
+}
+.fourthFigure .dashboardImgIcons {
+  left: 25em;
+}
+.fifthFigure .dashboardImgIcons {
+  left: 9em;
+  top: 2em;
+}
+.sixthFigure .dashboardImgIcons {
+  left: 8em;
+}
+.seventhFigure .dashboardImgIcons {
+  left: 8em;
+}
+/* end dashboard image icons */
+
 /* end main content dashboard */
 
 
