--- a/css/main.css
+++ b/css/main.css
@@ -135,6 +135,12 @@ body {
   margin-top: 10px;
   margin-right: 15px;
 }
+.boardCircle {
+  bottom: 0.6em;
+  color: #5EC9E6;
+  left: 2%;
+  position: relative;
+}
 
 /* nav-bar right search icon*/
 
@@ -145,7 +151,7 @@ body {
   border-radius: 50%;
 }
 
-/* nav-bar plus icon */
+/* nav-bar right plus icon */
 
 .rightNav li:nth-child(even) {
   background-color: #FF554C;
@@ -208,9 +214,7 @@ body {
   font-size: 1.5em;
   margin-left: 0.25em;
 }
-
 /*End pin and heart icons for hero image */
-
 
 /* End Hero Image Carousel  */
 
@@ -226,6 +230,7 @@ aside {
   padding-top: 2em;
 }
 aside > h3 {
+  margin-top: 1.5em;
   margin-bottom: 0;
 }
 .profileImg {
@@ -234,7 +239,7 @@ aside > h3 {
   border-radius: 50%;
 }
 .buttonsFollowMessage {
-  margin: 2em 0 2em 0;
+  margin: 3em 0 2em 0;
 }
 .buttonsFollowMessage button {
   border: 1px solid #5C5E5F;
@@ -261,7 +266,6 @@ aside > h3 {
 }
 .storiesAndFollowers ul {
   list-style: none;
-  margin: 0 2em;
   padding: 0 0 0 0;
 }
 .storiesAndFollowers ul li {
@@ -269,7 +273,8 @@ aside > h3 {
 }
 .storiesAndFollowers ul li:first-child {
   float: left;
-  margin-right: 3em;
+  margin-left: 2em;
+  margin-right: 3.5em;
 }
 .storiesAndFollowers li p:first-child {
   margin-bottom: 0;
@@ -277,10 +282,11 @@ aside > h3 {
 }
 .m {
   font-size: 20px;
+  position: relative;
+  right: 0.4em;
 }
-hr {
-  margin-right: 2em;
-  margin-left: 2em;
+aside hr {
+  margin: 3em 2em 3em 2em;
   color: #303334;
 }
 
@@ -298,19 +304,28 @@ hr {
 }
 .timeline p:first-child {
   float: left;
-  width: 40%;
+  font-size: 12px;
+  text-align: right;
+  width: 46%;
+}
+.postTime {
+  color: #A4A5A6;
+  font-size: 11px;
 }
 .timeline p:nth-child(even) {
   float: right;
-  width: 48.5%;
+  font-size: 12px;
+  text-align: left;
+  width: 40.5%;
 }
 .fa-circle {
   position: relative;
-  right: 4.3em;
+  right: 20.7%;
 }
 .secondCircle {
+  bottom:0.2em;
   position: relative;
-  left: 3.4em;
+  left: 22.6%;
 }
 
 /* timeline verticla line connecting dots */
@@ -318,9 +333,10 @@ hr {
 .timeline::before {
   background: #323536;
   content: '';
-  height: 100%;
-  left: 45%;
+  height: 111%;
+  left: 52%;
   position: absolute;
+  top: 8%;
   width: 2px;
 }
 
@@ -397,7 +413,7 @@ figcaption {
 /* First dashboard image figure */
 
 .firstFigure {
-  background: url("/img/Le_Louvre.jpg");
+  background: url("/img/Northern_Lights.jpg");
   background-size: cover;
   bottom: 10.6em;
   position: relative;
@@ -564,7 +580,6 @@ figcaption {
 /* End hover states on dashboard image */
 
 /* dashboard section caret */
-
 .fa-sort-asc {
   position: relative;
   left: 1.55em;
@@ -621,10 +636,6 @@ figcaption {
 
 /* inbox popover template */
 
-.popoverTemplate {
-  width: 350px;
-  height: 250px;
-}
 .userMessages {
   list-style: none;
   padding: 0;
@@ -659,21 +670,21 @@ figcaption {
   color: #646464;
 }
 .userMessages hr {
+  bottom: 1em;
+  margin: 0 2em 0 2em;
   position: relative;
   right: 2em;
-  bottom: 1em;
 }
 .userMessages button {
   background-color: #EFF0F0;
   width: 91%;
   position: relative;
   right: 1em;
-  bottom: 2em;
+  bottom: 0.8em;
   border: none;
   padding-bottom: 5px;
   color: #B3B6BA;
 }
-
 /* ==========================================================================
    Helper classes
    ========================================================================== */
